fixed size of search button overlapping with profile component

--- a/src/components/Search/Search.css
+++ b/src/components/Search/Search.css
@@ -1,7 +1,7 @@
 .search-form {
     display: grid;
     grid-area: search;
-    grid-template-columns: auto 100px;
+    grid-template-columns: auto 150px;
     width: auto;
 }
 
